<resources>
    <string name="app_name">MySuitmediaTest</string>
    <string name="name_title">Name</string>
    <string name="palindrome_title">Palindrome</string>
    <string name="check_title">Check</string>
    <string name="next_title">Next</string>
    <string name="second_screen_title">Second Screen</string>
    <string name="choose_user_title">Choose a User</string>
    <string name="user_full_name_title">User Full Name</string>
    <string name="selected_user_name_title">Selected User Name</string>
    <string name="welcome_title">Welcome</string>
    <string name="third_screen_title">Third Screen</string>
    <string name="is_palindrome">Palindrome</string>
    <string name="not_palindrome">Not Palindrome</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="no_more_pages">No More Pages</string>
</resources>